--- a/style.css
+++ b/style.css
@@ -14,13 +14,15 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: white;
     width: 870px;
     padding: 30px;
-    /* height: 679px; */
+    border-radius: 5px;
+    margin-top: 21px;
 }
 .top-players{
     margin-bottom: 30px;
@@ -45,4 +47,106 @@ main{
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+
+
+/* top blogs */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.title{
+    font-size: 20px;
+
+}
+.blog-author{
+    color:  #9F9F9F;
+    font-size: 16px;
+}
+
+/* courses style */
+.course-banner img{
+    width: 224px;
+    height: 104px;
+    margin-left: 15px;
+    margin-top: 11px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filed{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.duretion{
+    border-radius: 20px;
+    background-color:rgba(255, 128, 149, 0.561) ;
+    padding: 5px;
+    color: rgba(245, 63, 93, 0.835);
+    padding-right: 10px;
+}
+.fa-clock{
+    color: rgba(245, 63, 93, 0.835);
+}
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+    
+    /* display: flex;
+    justify-content: space-between; */
+}
+
+.course{
+    box-shadow: 0 5px 13px rgba(0, 0, 0, 0.123);
+    border: 1px solid rgba(32, 32, 32, 0.034);
+    border-radius: 5px;
+    width: 252px;
+}
+
+/* --------------------
+ media quary 
+-------------------- */
+
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        background-color: red;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+
+}
+
+@media only screen and (min-width:688px) and (max-width:992px) {
+
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
